objects/sumoapp__AccessSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>sumoapp__AllowCreatingEvents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow creating events in the multi-calendar</description>
        <inlineHelpText>Allow creating events in the multi-calendar</inlineHelpText>
        <label>Allow Creating Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__AllowDefineAvailability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Define Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__DisableDescriptionUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables filling and updating the event description</description>
        <label>Disable Description Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__PublicSite__c</fullName>
        <description>Site for generation public links</description>
        <inlineHelpText>Site for generation public links</inlineHelpText>
        <label>Public Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Access Settings</label>
</CustomObject>